tests/ui/transmutability/issue-110969.next.stderr
error[E0308]: mismatched types
  --> $DIR/issue-110969.rs:26:74
   |
LL |         const FALSE: bool = assert::is_transmutable::<Src, Dst, Context, {}>();
   |                                                                          ^^ expected `Assume`, found `()`

error[E0308]: mismatched types
  --> $DIR/issue-110969.rs:26:29
   |
LL |         const FALSE: bool = assert::is_transmutable::<Src, Dst, Context, {}>();
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
